--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Chilanka|Gayathri|Open+Sans+Condensed:300|Quicksand&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Lora|Montserrat&display=swap" rel="stylesheet">
+    
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Ruge+Boogie|Tangerine&display=swap" rel="stylesheet">
+
+
     <title>React App</title>
   </head>
   <body>
