added map, styled links, added more colors to background

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,10 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Lora|Montserrat&display=swap" rel="stylesheet">
-    
+
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Ruge+Boogie|Tangerine&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 
     <title>React App</title>
