minor extra fixes, changed class to className, changes some fonts on question 3

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Dancing+Script|Just+Me+Again+Down+Here&display=swap" rel="stylesheet">
+    
+
 
     <title>React App</title>
   </head>
